# sample-app

./: .env.example  Cargo.toml  README.md  docker-compose.yml  sample.db
.cargo/: config.toml
.sqlx/: query-5e7322794bac254e5849a5339308aa41cf143c03e7900d25b707c05cebfdbe29.json  query-751d1582b4d547c1fdeb0ac42cf73ce11cff0eb0784b3925d4d62e555c4469db.json  query-a4b7374dd85a90b488f1ef71d13bd99354afc9a8fe96e49cfc66b865f6b9da5b.json  query-ca96045f75c1c3f9b463485445fe1055ba411a4ea832277155f7ffa3e217b9c8.json  query-d0dd42096e796c6980c936d1d9d6b7ce6b194a0baf3eaf3ee99506b3224929a3.json  query-d8759afaec22d23ffd06f5755fc34d0b61b3b7fa79b9a03a74806ec092931b41.json  query-e893b55658a56010b2d75059e53b9df35778ce8d46dd8044fc6b6e3a54442eb3.json
migrations/: 0001_init.sql
src/: db.rs  kafka.rs  log.rs  main.rs  middleware.rs
src/api/: mod.rs  sample.rs
src/models/: kafka.rs  mod.rs  sample.rs  state.rs  user.rs
src/services/: sample.rs
src/templates/: error_403.html  error_404.html  error_500.html  layout.html  login.html  mod.rs  sample_form.html  samples_list.html  samples_row.html
src/web/: auth.rs  mod.rs  sample.rs
