[package]
name = "sample-app"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
askama = "0.14.0"
askama_axum = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.16"
anyhow = "1.0.100"
dotenvy= { version = "0.15.7"}

# Auth & security
argon2 = "0.5"
rand = "0.9.2"
base64 = "0.22"

tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace", "fs", "cors", "set-header"] }

# Sessions (signed cookie)
tower-sessions = { version = "0.14.0", features = ["signed"] }
# MemoryStore is fine for the assessment (swap to Redis/SQL store for prod)

# Database (SQLite)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# Kafka
rdkafka = { version = "0.38.0", features = ["tokio"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
http = "1.3.1"
futures-util ={ version = "0.3.31"}

[build-dependencies]
sqlx = { version = "0.8.6", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
